--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "./node_modules/.bin/eslint */*.js | ./node_modules/.bin/eslint app.js"
+    "eslint": "./node_modules/.bin/eslint js/main.js"
   },
   "repository": {
     "type": "git",
